<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FER MEDindex</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Mật khẩu</string>
    <string name="login_confirm_password_hint">Xác nhận mật khẩu</string>
    <string name="date">Ngày sinh(dd/mm/yyyy)</string>
    <string name="bottom_doctor">Thông tin bác sĩ</string>
    <string name="bottom_list_patient">Danh sách bệnh nhân</string>
    <string name="bottom_logout">Đăng xuất</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_everyone_please_confirm_your_position">Bạn là ai?</string>
    <string name="todo">TODO</string>
    <string name="doctor">BÁC SĨ</string>
    <string name="patient">BỆNH NHÂN</string>
    <string name="already_nhave_an_naccount">Bạn đã \nsẵn sàng \ntạo tài khoản\n</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="new_user_register_now">Đăng ký ngay</string>
    <string name="use_other_methods">Bạn có sẵn sàng để đăng nhập tài khoản?</string>
    <string name="account_infomation" tools:ignore="Typos">Thông tin người dùng</string>
    <string name="chinh_sua">Chỉnh sửa</string>
    <string name="please_enter_your_details_register">Vui lòng nhập\nthông tin\nchi tiết\ncủa bạn\nđể đăng ký</string>
    <string name="name">Họ và Tên</string>
    <string name="gender">Giới tính</string>
    <string name="female">Nữ</string>
    <string name="male">Nam</string>
    <string name="mobile_number">Điện thoại</string>
    <string name="register">Đăng ký</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="personal_information">Thông tin của bạn</string>
    <string name="full_name">Họ và tên</string>
    <string name="enter_your_full_name">Nhập họ và tên</string>
    <string name="date_off_birth_dd_mm_yyyy">Ngày sinh (dd/mm/yyyy)</string>
    <string name="select_your_date_of_birth_dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="mobile">Điện thoại</string>
    <string name="enter_your_mobile">Nhập số điện thoại của bạn</string>
    <string name="cmt_cccd_passport">CMND/CCCD/Hộ chiếu</string>
    <string name="enter_your_cmt_cccd_passport">Nhập CMND/CCCD/Hộ chiếu</string>
    <string name="address">Địa Chỉ</string>
    <string name="enter_your_address">Nhập địa chỉ</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Nhập email</string>
    <string name="health_monitoring">Bạn cảm thấy thế nào?</string>
    <string name="sot">Sốt</string>
    <string name="ho">Ho</string>
    <string name="kho_tho">Khó thở</string>
    <string name="dau_dau_met_moi">Đau người, mệt mỏi</string>
    <string name="suc_khoe_tot">Sức khoẻ tốt</string>
    <string name="cam_ket">Tôi cam kết các thông tin khai là đúng sự thât và đồng ý với điều khoản sử dụng</string>
    <string name="hay_dang_ky_form">Bạn muốn làm gì?</string>
    <string name="dang_ky">ĐĂNG KÍ</string>
    <string name="xem_lai_form">XEM LẠI FORM</string>
</resources>