<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Update Details"
        android:background="@color/teal_200"
        android:textSize="30dp"
        android:gravity="center"
        android:textColor="#FFF"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"/>

        <TextView
            android:id="@+id/textview_register_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="6dp"
            android:text="@string/full_name"
            android:textColor="#555555"
            android:textSize="16sp"
            app:helperText="Required*"
            app:helperTextTextColor="@color/teal_200"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/editText_register_patient_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_register_full_name"
            android:background="@drawable/border1"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:hint="@string/enter_your_full_name"
            android:inputType="textPersonName"
            android:padding="6dp"
            android:textSize="16sp"
            tools:ignore="Autofill"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/textview_register_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_register_patient_full_name"
            android:layout_marginTop="10dp"
            android:padding="6dp"
            android:text="@string/date_off_birth_dd_mm_yyyy"
            android:textColor="#555555"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/editText_register_patient_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_register_dob"
            android:background="@drawable/border1"
            android:drawableStart="@drawable/ic_baseline_calendar_today_24"
            android:focusable="false"
            android:hint="@string/select_your_date_of_birth_dd_mm_yyyy"
            android:inputType="date"
            android:padding="6dp"
            android:textSize="16sp"
            tools:ignore="Autofill"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/textview_register_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_register_patient_dob"
            android:layout_marginTop="10dp"
            android:padding="6dp"
            android:text="@string/gender"
            android:textColor="#555555"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

    <EditText
        android:id="@+id/editText_register_patient_gioitinh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_register_gender"
        android:background="@drawable/border1"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:hint="Giới tinh"
        android:inputType="phone"
        android:padding="6dp"
        android:textSize="16sp"
        tools:ignore="Autofill"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/textview_register_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_register_patient_gioitinh"
            android:layout_marginTop="10dp"
            android:padding="6dp"
            android:text="@string/mobile"
            android:textColor="#555555"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/editText_register_patient_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_register_mobile"
            android:background="@drawable/border1"
            android:drawableStart="@drawable/ic_baseline_phone_android_24"
            android:hint="@string/enter_your_mobile"
            android:inputType="phone"
            android:padding="6dp"
            android:textSize="16sp"
            tools:ignore="Autofill"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/textview_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_register_patient_mobile"
            android:layout_marginTop="10dp"
            android:padding="6dp"
            android:text="@string/cmt_cccd_passport"
            android:textColor="#555555"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/editText_register_patient_passport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_address"
            android:background="@drawable/border1"
            android:drawableStart="@drawable/passportp2"
            android:hint="@string/enter_your_cmt_cccd_passport"
            android:inputType="number"
            android:padding="6dp"
            android:textSize="16sp"
            tools:ignore="Autofill"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/textview_register_adrress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_register_patient_passport"
            android:layout_marginTop="10dp"
            android:padding="6dp"
            android:text="@string/address"
            android:textColor="#555555"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/editText_register_patient_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_register_adrress"
            android:background="@drawable/border1"
            android:drawableStart="@drawable/map"
            android:hint="@string/enter_your_address"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textSize="16sp"
            tools:ignore="Autofill"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/textview_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_register_patient_address"
            android:layout_marginTop="10dp"
            android:padding="6dp"
            android:text="@string/email"
            android:textColor="#555555"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/editText_register_patient_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_register_email"
            android:background="@drawable/border1"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textSize="16sp"
            tools:ignore="Autofill"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
        <TextView
            android:id="@+id/textview_register_tinh_trang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_register_patient_address"
            android:layout_marginTop="10dp"
            android:padding="6dp"
            android:text="Trạng thái"
            android:textColor="#555555"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/editText_register_patient_tinh_trang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_register_email"
            android:background="@drawable/border1"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:hint="Nhập  trạng thái"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textSize="16sp"
            tools:ignore="Autofill"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
    <Button
        android:id="@+id/button_update_patient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_register_patient_email"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="70dp"
        android:background="@drawable/background_patientp2"
        android:text="@string/register"
        android:textStyle="bold" />
    </LinearLayout>

</ScrollView>